overflow fix on testpage

--- a/testpage/test.scss
+++ b/testpage/test.scss
@@ -11,28 +11,31 @@ body{
     overflow-x: hidden;
 }
 img{
-    width: 100%;
-    position: absolute;   
+    width: 150%;
+    position: absolute;  
 }
 @keyframes rotatewave{
     0%{rotate: 0deg;}
-    20%{rotate: 5deg;}
-    40%{rotate: -5deg;}
-    60%{rotate: 5deg;}
-    80%{rotate: -5deg;}
-    100%{rotate: 0deg;}
+    33%{rotate: 5deg;}
+    66%{rotate: -5deg;}
+    100%{rotate: 5deg;}
+    
 }
 
 @keyframes movewave{
-    0%{right: 0vw;}
-    50%{right: 2vw;}
-    100%{right: 0vw;}
+    0%{transform: translateX(0vw)}
+    50%{transform: translateX(4vw)}
+    100%{transform: translateX(0vw)}
 }
 .backwave{
     animation: rotatewave 12s infinite;
     top: 300px;
+    right: -10vw;
+    transform-origin: center;
 }
 .frontwave{
-    animation: movewave 4s infinite;
+    animation: movewave 3s infinite;
     top:500px;
+    transform-origin: center;
+    left: -10vw;
 }
